Fixing easyzoom on mobile viewports in landscape from preventing scrolling.

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -34,7 +34,7 @@
         margin-top: spacing("half");
     }
 
-    @media (min-width: $screen-xxsmall) and (max-width: $screen-xsmall) {
+    @media (min-width: $screen-xxsmall) and (max-width: $screen-medium) {
         pointer-events: none;
     }
 }
